--- a/app/admin/chien-dich/chien-dich-detail.component.html
+++ b/app/admin/chien-dich/chien-dich-detail.component.html
@@ -33,12 +33,16 @@
 				<tr>
 					<th>Tên</th>
 					<th>Mật khẩu</th>
+					<th>Thành tích</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr *ngFor="let item of doiChoiList">
 					<td>{{item.name}}</td>
 					<td>{{item.password}}</td>
+					<td>Còn {{item.so_may_bay_con_lai || '0'}} bắn {{item.so_may_bay_ban_duoc || '0'}}</td>
+					<td><button class="btn btn-sm btn-danger" (click)="removeDoiChoi(item)">Xóa</button></td>
 				</tr>
 			</tbody>
 		</table>
