Add update button

--- a/app/admin/chien-dich/chien-dich-detail.component.html
+++ b/app/admin/chien-dich/chien-dich-detail.component.html
@@ -14,7 +14,7 @@
 
 <div class="card">
 	<div class="card-header bg-dark text-white">
-		Đội chơi
+		Đội chơi <button class="btn btn-sm btn-info" (click)="update()">Cập nhật</button>
 	</div>
 	<div class="card-body">
 		<form class="form">
